Implement DropwizardExports
Signed-off-by: Kinshuk Bairagi <hi@kinsh.uk>