@@ -1,23 +1,14 @@
-package io.prometheus.client.dropwizard;
+package io.prometheus.metrics.instrumentation.dropwizard;
 
-import com.codahale.metrics.Counter;
-import com.codahale.metrics.Gauge;
-import com.codahale.metrics.Histogram;
-import com.codahale.metrics.Meter;
-import com.codahale.metrics.Metric;
-import com.codahale.metrics.MetricFilter;
-import com.codahale.metrics.MetricRegistry;
-import com.codahale.metrics.Snapshot;
-import com.codahale.metrics.Timer;
-import io.prometheus.client.dropwizard.samplebuilder.SampleBuilder;
-import io.prometheus.client.dropwizard.samplebuilder.DefaultSampleBuilder;
+import io.dropwizard.metrics5.Timer;
+import io.dropwizard.metrics5.*;
+import io.prometheus.metrics.instrumentation.dropwizard.samplebuilder.DefaultSampleBuilder;
+import io.prometheus.metrics.instrumentation.dropwizard.samplebuilder.SampleBuilder;
+import io.prometheus.metrics.model.registry.MultiCollector;
+import io.prometheus.metrics.model.registry.PrometheusScrapeRequest;
+import io.prometheus.metrics.model.snapshots.*;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.SortedMap;
+import java.util.*;
 import java.util.concurrent.TimeUnit;
 import java.util.logging.Level;
 import java.util.logging.Logger;
@@ -25,7 +16,7 @@ import java.util.logging.Logger;
 /**
  * Collect Dropwizard metrics from a MetricRegistry.
  */
-public class DropwizardExports extends io.prometheus.client.Collector implements io.prometheus.client.Collector.Describable {
+public class DropwizardExports implements MultiCollector {
     private static final Logger LOGGER = Logger.getLogger(DropwizardExports.class.getName());
     private MetricRegistry registry;
     private MetricFilter metricFilter;
@@ -37,6 +28,7 @@ public class DropwizardExports extends io.prometheus.client.Collector implements
      * @param registry a metric registry to export in prometheus.
      */
     public DropwizardExports(MetricRegistry registry) {
+        super();
         this.registry = registry;
         this.metricFilter = MetricFilter.ALL;
         this.sampleBuilder = new DefaultSampleBuilder();
@@ -80,19 +72,24 @@ public class DropwizardExports extends io.prometheus.client.Collector implements
                 metricName, metric.getClass().getName());
     }
 
+
+    private static MetricMetadata getMetricMetaData(String metricName, Metric metric) {
+        return new MetricMetadata(PrometheusNaming.sanitizeMetricName(metricName), getHelpMessage(metricName, metric));
+    }
+
     /**
      * Export counter as Prometheus <a href="https://prometheus.io/docs/concepts/metric_types/#gauge">Gauge</a>.
      */
-    MetricFamilySamples fromCounter(String dropwizardName, Counter counter) {
-        MetricFamilySamples.Sample sample = sampleBuilder.createSample(dropwizardName, "", new ArrayList<String>(), new ArrayList<String>(),
-                new Long(counter.getCount()).doubleValue());
-        return new MetricFamilySamples(sample.name, Type.GAUGE, getHelpMessage(dropwizardName, counter), Arrays.asList(sample));
+    MetricSnapshot fromCounter(String dropwizardName, Counter counter) {
+        MetricMetadata metadata = getMetricMetaData(dropwizardName, counter);
+        CounterSnapshot.CounterDataPointSnapshot dataPointSnapshot = CounterSnapshot.CounterDataPointSnapshot.builder().value(Long.valueOf(counter.getCount()).doubleValue()).build();
+        return new CounterSnapshot(metadata, Collections.singletonList(dataPointSnapshot));
     }
 
     /**
      * Export gauge as a prometheus gauge.
      */
-    MetricFamilySamples fromGauge(String dropwizardName, Gauge gauge) {
+    MetricSnapshot fromGauge(String dropwizardName, Gauge gauge) {
         Object obj = gauge.getValue();
         double value;
         if (obj instanceof Number) {
@@ -100,13 +97,13 @@ public class DropwizardExports extends io.prometheus.client.Collector implements
         } else if (obj instanceof Boolean) {
             value = ((Boolean) obj) ? 1 : 0;
         } else {
-            LOGGER.log(Level.FINE, String.format("Invalid type for Gauge %s: %s", sanitizeMetricName(dropwizardName),
+            LOGGER.log(Level.FINE, String.format("Invalid type for Gauge %s: %s", PrometheusNaming.sanitizeMetricName(dropwizardName),
                     obj == null ? "null" : obj.getClass().getName()));
             return null;
         }
-        MetricFamilySamples.Sample sample = sampleBuilder.createSample(dropwizardName, "",
-                new ArrayList<String>(), new ArrayList<String>(), value);
-        return new MetricFamilySamples(sample.name, Type.GAUGE, getHelpMessage(dropwizardName, gauge), Arrays.asList(sample));
+        MetricMetadata metadata = getMetricMetaData(dropwizardName, gauge);
+        GaugeSnapshot.GaugeDataPointSnapshot dataPointSnapshot = GaugeSnapshot.GaugeDataPointSnapshot.builder().value(value).build();
+        return new GaugeSnapshot(metadata, Collections.singletonList(dataPointSnapshot));
     }
 
     /**
@@ -117,23 +114,25 @@ public class DropwizardExports extends io.prometheus.client.Collector implements
      * @param count          the total sample count for this snapshot.
      * @param factor         a factor to apply to histogram values.
      */
-    MetricFamilySamples fromSnapshotAndCount(String dropwizardName, Snapshot snapshot, long count, double factor, String helpMessage) {
-        List<MetricFamilySamples.Sample> samples = Arrays.asList(
-                sampleBuilder.createSample(dropwizardName, "", Arrays.asList("quantile"), Arrays.asList("0.5"), snapshot.getMedian() * factor),
-                sampleBuilder.createSample(dropwizardName, "", Arrays.asList("quantile"), Arrays.asList("0.75"), snapshot.get75thPercentile() * factor),
-                sampleBuilder.createSample(dropwizardName, "", Arrays.asList("quantile"), Arrays.asList("0.95"), snapshot.get95thPercentile() * factor),
-                sampleBuilder.createSample(dropwizardName, "", Arrays.asList("quantile"), Arrays.asList("0.98"), snapshot.get98thPercentile() * factor),
-                sampleBuilder.createSample(dropwizardName, "", Arrays.asList("quantile"), Arrays.asList("0.99"), snapshot.get99thPercentile() * factor),
-                sampleBuilder.createSample(dropwizardName, "", Arrays.asList("quantile"), Arrays.asList("0.999"), snapshot.get999thPercentile() * factor),
-                sampleBuilder.createSample(dropwizardName, "_count", new ArrayList<String>(), new ArrayList<String>(), count)
-        );
-        return new MetricFamilySamples(samples.get(0).name, Type.SUMMARY, helpMessage, samples);
+    MetricSnapshot fromSnapshotAndCount(String dropwizardName, Snapshot snapshot, long count, double factor, String helpMessage) {
+        Quantiles quantiles = Quantiles.builder()
+                .quantile(0.5, snapshot.getMedian() * factor)
+                .quantile(0.75, snapshot.get75thPercentile() * factor)
+                .quantile(0.95, snapshot.get95thPercentile() * factor)
+                .quantile(0.98, snapshot.get98thPercentile() * factor)
+                .quantile(0.99, snapshot.get99thPercentile() * factor)
+                .quantile(0.999, snapshot.get999thPercentile() * factor)
+                .build();
+
+        MetricMetadata metadata = new MetricMetadata(PrometheusNaming.sanitizeMetricName(dropwizardName), helpMessage);
+        SummarySnapshot.SummaryDataPointSnapshot dataPointSnapshot = SummarySnapshot.SummaryDataPointSnapshot.builder().quantiles(quantiles).count(count).build();
+        return new SummarySnapshot(metadata, Collections.singletonList(dataPointSnapshot));
     }
 
     /**
      * Convert histogram snapshot.
      */
-    MetricFamilySamples fromHistogram(String dropwizardName, Histogram histogram) {
+    MetricSnapshot fromHistogram(String dropwizardName, Histogram histogram) {
         return fromSnapshotAndCount(dropwizardName, histogram.getSnapshot(), histogram.getCount(), 1.0,
                 getHelpMessage(dropwizardName, histogram));
     }
@@ -141,7 +140,7 @@ public class DropwizardExports extends io.prometheus.client.Collector implements
     /**
      * Export Dropwizard Timer as a histogram. Use TIME_UNIT as time unit.
      */
-    MetricFamilySamples fromTimer(String dropwizardName, Timer timer) {
+    MetricSnapshot fromTimer(String dropwizardName, Timer timer) {
         return fromSnapshotAndCount(dropwizardName, timer.getSnapshot(), timer.getCount(),
                 1.0D / TimeUnit.SECONDS.toNanos(1L), getHelpMessage(dropwizardName, timer));
     }
@@ -149,53 +148,32 @@ public class DropwizardExports extends io.prometheus.client.Collector implements
     /**
      * Export a Meter as as prometheus COUNTER.
      */
-    MetricFamilySamples fromMeter(String dropwizardName, Meter meter) {
-        final MetricFamilySamples.Sample sample = sampleBuilder.createSample(dropwizardName, "_total",
-                new ArrayList<String>(),
-                new ArrayList<String>(),
-                meter.getCount());
-        return new MetricFamilySamples(sample.name, Type.COUNTER, getHelpMessage(dropwizardName, meter),
-                        Arrays.asList(sample));
+    MetricSnapshot fromMeter(String dropwizardName, Meter meter) {
+        MetricMetadata metadata = getMetricMetaData(dropwizardName+"_total", meter);
+        CounterSnapshot.CounterDataPointSnapshot dataPointSnapshot = CounterSnapshot.CounterDataPointSnapshot.builder().value(meter.getCount()).build();
+        return new CounterSnapshot(metadata, Collections.singletonList(dataPointSnapshot));
     }
 
     @Override
-    public List<MetricFamilySamples> collect() {
-        Map<String, MetricFamilySamples> mfSamplesMap = new HashMap<String, MetricFamilySamples>();
-
-        for (SortedMap.Entry<String, Gauge> entry : registry.getGauges(metricFilter).entrySet()) {
-            addToMap(mfSamplesMap, fromGauge(entry.getKey(), entry.getValue()));
+    public MetricSnapshots collect(){
+        MetricSnapshots.Builder metricSnapshots = MetricSnapshots.builder();
+        for (SortedMap.Entry<MetricName, Gauge> entry : registry.getGauges(metricFilter).entrySet()) {
+            Optional.ofNullable(fromGauge(entry.getKey().getKey(), entry.getValue())).map(metricSnapshots::metricSnapshot);
         }
-        for (SortedMap.Entry<String, Counter> entry : registry.getCounters(metricFilter).entrySet()) {
-            addToMap(mfSamplesMap, fromCounter(entry.getKey(), entry.getValue()));
+        for (SortedMap.Entry<MetricName, Counter> entry : registry.getCounters(metricFilter).entrySet()) {
+            metricSnapshots.metricSnapshot(fromCounter(entry.getKey().getKey(), entry.getValue()));
         }
-        for (SortedMap.Entry<String, Histogram> entry : registry.getHistograms(metricFilter).entrySet()) {
-            addToMap(mfSamplesMap, fromHistogram(entry.getKey(), entry.getValue()));
+        for (SortedMap.Entry<MetricName, Histogram> entry : registry.getHistograms(metricFilter).entrySet()) {
+            metricSnapshots.metricSnapshot(fromHistogram(entry.getKey().getKey(), entry.getValue()));
         }
-        for (SortedMap.Entry<String, Timer> entry : registry.getTimers(metricFilter).entrySet()) {
-            addToMap(mfSamplesMap, fromTimer(entry.getKey(), entry.getValue()));
+        for (SortedMap.Entry<MetricName, Timer> entry : registry.getTimers(metricFilter).entrySet()) {
+            metricSnapshots.metricSnapshot(fromTimer(entry.getKey().getKey(), entry.getValue()));
         }
-        for (SortedMap.Entry<String, Meter> entry : registry.getMeters(metricFilter).entrySet()) {
-            addToMap(mfSamplesMap, fromMeter(entry.getKey(), entry.getValue()));
+        for (SortedMap.Entry<MetricName, Meter> entry : registry.getMeters(metricFilter).entrySet()) {
+            metricSnapshots.metricSnapshot(fromMeter(entry.getKey().getKey(), entry.getValue()));
         }
-        return new ArrayList<MetricFamilySamples>(mfSamplesMap.values());
+        return metricSnapshots.build();
     }
 
-    private void addToMap(Map<String, MetricFamilySamples> mfSamplesMap, MetricFamilySamples newMfSamples)
-    {
-        if (newMfSamples != null) {
-            MetricFamilySamples currentMfSamples = mfSamplesMap.get(newMfSamples.name);
-            if (currentMfSamples == null) {
-                mfSamplesMap.put(newMfSamples.name, newMfSamples);
-            } else {
-                List<MetricFamilySamples.Sample> samples = new ArrayList<MetricFamilySamples.Sample>(currentMfSamples.samples);
-                samples.addAll(newMfSamples.samples);
-                mfSamplesMap.put(newMfSamples.name, new MetricFamilySamples(newMfSamples.name, currentMfSamples.type, currentMfSamples.help, samples));
-            }
-        }
-    }
 
-    @Override
-    public List<MetricFamilySamples> describe() {
-        return new ArrayList<MetricFamilySamples>();
-    }
 }
